# dns-speed-test

./: .gitignore  LICENSE  README.MD  index.html  package-lock.json  package.json  servers.json  vite.config.js
assets/: ResultsChart-gv23b9kJ.js  dns_wasm-esD_YiUJ.js  dns_wasm_bg-CcTiSNUT.wasm  index-BwmtSKDn.css  index-sWb8bUNw.js
dns-wasm/: Cargo.toml
dns-wasm/src/: lib.rs
scripts/: buildAllInFromDnscrypt.mjs
src/: App.jsx  index.css
src/components/: FastestLiveLatencyCard.jsx  GeoLocationCard.jsx  LoadingSpinner.jsx  ModeSelector.jsx  ProgressBar.jsx  RecommendationCard.jsx  ResultsChart.jsx  ResultsTable.jsx
src/config/: constants.ts  dnsServers.js
src/hooks/: useAllServers.ts  useDnsTest.ts
src/services/: dnsEngineWasm.js  geoLocation.js
src/types/: dns.ts
src/utils/: dnsMetrics.ts
