[package]
name = "dns-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "Headers",
    "Performance",
    "console",
    "AbortController",
    "AbortSignal",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
